# cache-simulator

./: .gitignore  CMakeLists.txt  Cache.cpp  Cache.h  CacheLine.cpp  CacheLine.h  CacheSet.cpp  CacheSet.h  CacheTypes.h  Memory.cpp  Memory.h  MemoryBlock.cpp  MemoryBlock.h  README.md  Simulate.cpp  Simulate.h  Tester.cpp  Tester.h  custom_setup.txt  main.cpp  visualize_results.py
data/: miss_rate_vs_block_size.csv  miss_rate_vs_cache_size.csv
traces/: trace1.txt  trace2.txt
